fix: multi-dex loads